Redone the background and ethical issues section

--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -34,6 +34,14 @@
   year   = {2022}
 } 
 
+@misc{RNN_diagram,
+  title     = {Recurrent Neural Networks Tutorial},
+  url       = {https://www.kdnuggets.com/2015/10/recurrent-neural-networks-tutorial.html},
+  author    = {Denny Britz},
+  publisher = {KGnuggets},
+  year      = {2015}
+}
+
 @misc{BERT,
   doi       = {10.48550/ARXIV.1810.04805},
   url       = {https://arxiv.org/abs/1810.04805},
@@ -48,7 +56,16 @@
 @misc{RoBERTa,
   doi       = {10.48550/ARXIV.1907.11692},
   url       = {https://arxiv.org/abs/1907.11692},
-  author    = {Liu, Yinhan and Ott, Myle and Goyal, Naman and Du, Jingfei and Joshi, Mandar and Chen, Danqi and Levy, Omer and Lewis, Mike and Zettlemoyer, Luke and Stoyanov, Veselin},
+  author    = {Liu, Yinhan and
+               Ott, Myle and
+               Goyal, Naman and
+               Du, Jingfei and
+               Joshi, Mandar and
+               Chen, Danqi and
+               Levy, Omer and
+               Lewis, Mike and
+               Zettlemoyer, Luke and
+               Stoyanov, Veselin},
   keywords  = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
   title     = {RoBERTa: A Robustly Optimized BERT Pretraining Approach},
   publisher = {arXiv},
@@ -418,3 +435,76 @@
   url     = {https://doi.org/10.1007/s00146-020-01053-4}
 }
 
+@article{gpt_3,
+  title         = {Language Models are Few-Shot Learners},
+  author        = {Tom B. Brown and 
+                   Benjamin Mann and
+                   Nick Ryder and
+                   Melanie Subbiah and
+                   Jared Kaplan and
+                   Prafulla Dhariwal and
+                   Arvind Neelakantan and
+                   Pranav Shyam and
+                   Girish Sastry and
+                   Amanda Askell and 
+                   Sandhini Agarwal and
+                   Ariel Herbert-Voss and
+                   Gretchen Krueger and
+                   Tom Henighan and
+                   Rewon Child and
+                   Aditya Ramesh and
+                   Daniel M. Ziegler and
+                   Jeffrey Wu and
+                   Clemens Winter and
+                   Christopher Hesse and
+                   Mark Chen and
+                   Eric Sigler and
+                   Mateusz Litwin and
+                   Scott Gray and
+                   Benjamin Chess and
+                   Jack Clark and
+                   Christopher Berner and
+                   Sam McCandlish and
+                   Alec Radford and
+                   Ilya Sutskever and
+                   Dario Amodei},
+  year          = {2020},
+  eprint        = {2005.14165},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.CL},
+  journal       = {OpenAI}
+}
+
+@inproceedings{rnns,
+  title  = {Learning internal representations by error propagation},
+  author = {David E. Rumelhart and 
+            Geoffrey E. Hinton and 
+            Ronald J. Williams},
+  year   = {1986},
+  pages  = {4, 8}
+}
+
+@misc{mha_paper,
+  title         = {Multi-Head Attention: Collaborate Instead of Concatenate},
+  author        = {Jean-Baptiste Cordonnier and 
+                   Andreas Loukas and 
+                   Martin Jaggi},
+  year          = {2021},
+  eprint        = {2006.16362},
+  archiveprefix = {arXiv},
+  primaryclass  = {cs.LG}
+}
+
+@article{mnist_paper,
+  author  = {Lecun, Y. and
+             Bottou, L. and
+             Bengio, Y. and
+             Haffner, P.},
+  journal = {Proceedings of the IEEE},
+  title   = {Gradient-based learning applied to document recognition},
+  year    = {1998},
+  volume  = {86},
+  number  = {11},
+  pages   = {2278-2324},
+  doi     = {10.1109/5.726791}
+}
