--- a/interim_report.tex
+++ b/interim_report.tex
@@ -72,7 +72,7 @@
 \input{future_work/future_work.tex}
 \input{appendix/appendix.tex}
 
-\bibliographystyle{unsrtnat}
+\bibliographystyle{vancouver}
 \bibliography{bibs/bibliography}
 
 \end{document}
