Updated ethical issues

--- a/ethical_issues/ethical_issues.tex
+++ b/ethical_issues/ethical_issues.tex
@@ -11,7 +11,7 @@ Some of our training data by nature will be toxic and hateful as we require this
 
 \section{Environmental}
 
-A potential environmental issue may be the use of Imperial College London's Department of Computing GPU cluster. The training of new large language models has taken extensive computation power and time resulting in a large carbon footprint. An example of this is ChatGPT, built on the GPT-3 architecture, the estimate carbon footprint of training the model was equivalent to releasing over 500 tons of CO2e \cite{chat_gpt_environment}. We will have to use the GPU cluster at our disposal to pre-process large datasets and train many models throughout the project which will take many hours to complete. Although this will not be at the same level as the large language models we see in the news, we will attempt to limit the number of jobs run to reduce the total compute time and the carbon footprint.
+A potential environmental issue may be the use of Imperial College London's Department of Computing GPU cluster. The training of new large language models has taken extensive computation power and time resulting in a large carbon footprint. An example of this is ChatGPT, built on the GPT-3 architecture, the estimated carbon footprint of training the model was equivalent to releasing over 500 tons of CO2e \cite{chat_gpt_environment}. We will have to use the GPU cluster at our disposal to pre-process large datasets and train many models throughout the project which will take many hours to complete. Although this will not be at the same level as the large language models we see in the news, we will attempt to limit the number of jobs run to reduce the total compute time and the carbon footprint.
 
 \section{Licensing}
 
