--- a/bibs/bibliography.bib
+++ b/bibs/bibliography.bib
@@ -508,3 +508,16 @@
   pages   = {2278-2324},
   doi     = {10.1109/5.726791}
 }
+
+@article{levenshtein,
+  author  = {{Levenshtein}, V.~I.},
+  title   = {{Binary Codes Capable of Correcting Deletions, Insertions and Reversals}},
+  journal = {Soviet Physics Doklady},
+  year    = 1966,
+  month   = feb,
+  volume  = {10},
+  pages   = {707},
+  adsurl  = {https://ui.adsabs.harvard.edu/abs/1966SPhD...10..707L},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
