--- a/interim_report.tex
+++ b/interim_report.tex
@@ -67,7 +67,8 @@
 \input{background/background.tex}
 \input{ethical_issues/ethical_issues.tex}
 \input{datasets/datasets.tex}
-\input{methodology/methodology.tex}
+\input{experimental_setup/experimental_setup.tex}
+\input{evaluation/evaluation.tex}
 \input{conclusion/conclusion.tex}
 \input{future_work/future_work.tex}
 \input{appendix/appendix.tex}
