--- a/background/background.tex
+++ b/background/background.tex
@@ -19,7 +19,7 @@ In addition to chatbots, NLP finds utility in text classification tasks. In this
     \label{fig:rnn}
 \end{figure}
 
-Recurrent Neural Networks (RNNS) are a form of machine learning tasked with learning internal representations of sequential data first proposed by Rumelhart et al. \cite{rnns} in 1986. RNNs introduced recurrent connections between neutrons, allowing them to retain information and capture contextual information from previous inputs. The ability to remember previous information made them particularly suitable for tasks involving sequential data such as language modeling, speech recognition and machine translation. By modelling dependencies between elements in a sequence, RNNs can effectively analyse the temporal dynamics of an input. The recurrent connections are described in Equation \ref{eq:rnns} below.
+Recurrent Neural Networks (RNNS) are a form of machine learning tasked with learning internal representations of sequential data first proposed by Rumelhart \textit{et al.} \cite{rnns} in 1986. RNNs introduced recurrent connections between neutrons, allowing them to retain information and capture contextual information from previous inputs. The ability to remember previous information made them particularly suitable for tasks involving sequential data such as language modeling, speech recognition and machine translation. By modelling dependencies between elements in a sequence, RNNs can effectively analyse the temporal dynamics of an input. The recurrent connections are described in Equation \ref{eq:rnns} below.
 
 \begin{equation}
     \begin{gathered}
@@ -36,7 +36,7 @@ These limitations hinder the effectiveness of traditional RNNs in capturing long
 
 \section{Transformers}
 
-Transformers were first introduced by Vaswani et al. \cite{transformer_paper} to effectively capture and leverage the relationships between elements in a sequence, with the main application being within the field of Natural Language Processing. They proposed a novel approach that relied on attention mechanisms to allow the model to attend to different sections of the input sequence to overcome the limitations of recurrent neural networks with the hope of overcoming the limitations of long-term dependencies found in previous models.
+Transformers were first introduced by Vaswani \textit{et al.} \cite{transformer_paper} to effectively capture and leverage the relationships between elements in a sequence, with the main application being within the field of Natural Language Processing. They proposed a novel approach that relied on attention mechanisms to allow the model to attend to different sections of the input sequence to overcome the limitations of recurrent neural networks with the hope of overcoming the limitations of long-term dependencies found in previous models.
 
 \subsection{Transformer Architecture}
 
@@ -45,7 +45,7 @@ The transformer model is composed of 6 identical layers of encoders and decoders
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.5\textwidth]{graphs/transformer_architecture.png}
-    \caption{Transformer Architecture as proposed by Vaswani et al. \cite{transformer_paper}. It contains the encoder and decoder, mapping the route inputs take through the model}
+    \caption{Transformer Architecture as proposed by Vaswani \textit{et al.} \cite{transformer_paper}. It contains the encoder and decoder, mapping the route inputs take through the model}
     \label{fig:transformer_arch}
 \end{figure}
 
@@ -116,14 +116,14 @@ To achieve bidirectional context modeling, BERT utilises a technique called "Mas
     \item 10\% of the tokens are left the same to help bias the representation into the actual observed word
 \end{enumerate}
 
-The tokenisation process proposed by Devlin et al. \cite{BERT} is illustrated in Figure \ref{fig:bert}. The initial tokens, including special classification tokens such as \verb|[CLS]| and separator tokens such as \verb|[SEP]| are transformed into token embeddings. These token embeddings are then combined with segment embeddings, indicating which segment each token belongs to, and positional embeddings, which encode the token's position within the sequence.
+The tokenisation process proposed by Devlin \textit{et al.} \cite{BERT} is illustrated in Figure \ref{fig:bert}. The initial tokens, including special classification tokens such as \verb|[CLS]| and separator tokens such as \verb|[SEP]| are transformed into token embeddings. These token embeddings are then combined with segment embeddings, indicating which segment each token belongs to, and positional embeddings, which encode the token's position within the sequence.
 
 This inclusion of segment embeddings is particularly useful for tasks that require multiple sentences or paragraphs as inputs as it allows BERT to differentiate between different segments of the input. This helps facilitate the capture of contextual relationships across sentence boundaries.
 
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{graphs/bert.png}
-    \caption{BERT input representation by Devlin et al. \cite{BERT}. Input embeddings are the sum of token, segmentation and position embeddings.}
+    \caption{BERT input representation by Devlin \textit{et al.} \cite{BERT}. Input embeddings are the sum of token, segmentation and position embeddings.}
     \label{fig:bert}
 \end{figure}
 
@@ -131,7 +131,7 @@ Another notable aspect of BERT is the use of a pre-training and fine-tuning para
 
 \subsection{Sentiment Analysis}
 
-We are interested in the use of Transformers for text classification through the fine-tuning of pre-trained language models which is one of the downstream tasks proposed by Devlin et al. to evaluate BERT. A special \verb|[CLS]| token was used to produce a corresponding output $C$ that was fed into a separate classification layer to obtain the sentence logits.
+We are interested in the use of Transformers for text classification through the fine-tuning of pre-trained language models which is one of the downstream tasks proposed by Devlin \textit{et al.} to evaluate BERT. A special \verb|[CLS]| token was used to produce a corresponding output $C$ that was fed into a separate classification layer to obtain the sentence logits.
 
 \begin{equation}
     \begin{gathered}
@@ -144,7 +144,7 @@ Where $W_{c}$ and $b_{c}$ are learned weights and biases used for classification
 
 \subsection{RoBERTa}
 
-RoBERTa, introduced by Liu et al. \cite{RoBERTa}, is a variant of the BERT architecture that aims to enhance its performance and address certain limitations. RoBERTa builds upon the success of BERT but introduces additional modifications to improve its pre-training process.
+RoBERTa, introduced by Liu \textit{et al.} \cite{RoBERTa}, is a variant of the BERT architecture that aims to enhance its performance and address certain limitations. RoBERTa builds upon the success of BERT but introduces additional modifications to improve its pre-training process.
 
 One notable difference in RoBERTa is the use of larger batch sizes during pre-training. By increasing the batch size, RoBERTa benefits from more diverse and varied sentence pairs, resulting in improved generalization capabilities. Additionally, RoBERTa leverages a longer training duration, which enables it to achieve even better performance compared to BERT.
 
@@ -154,7 +154,7 @@ Overall, RoBERTa improves upon BERT's pre-training methodology and achieves stat
 
 \subsection{AlBERT}
 
-AlBERT, produced by Lan et al. \cite{AlBERT}, is a variation of the BERT architecture that addresses several limitations of the original model. One key improvement is the introduction of parameter sharing across layers, which significantly reduces the model's memory footprint and enhances its efficiency and scalability compared to BERT. This makes AlBERT particularly suitable for deploying models in resource-constrained environments, such as mobile devices. In terms of parameter count, while BERT has around 110 million parameters (and RoBERTa has 125 million), AlBERT achieves comparable performance with only 11 million parameters.
+AlBERT, produced by Lan \textit{et al.} \cite{AlBERT}, is a variation of the BERT architecture that addresses several limitations of the original model. One key improvement is the introduction of parameter sharing across layers, which significantly reduces the model's memory footprint and enhances its efficiency and scalability compared to BERT. This makes AlBERT particularly suitable for deploying models in resource-constrained environments, such as mobile devices. In terms of parameter count, while BERT has around 110 million parameters (and RoBERTa has 125 million), AlBERT achieves comparable performance with only 11 million parameters.
 
 However, AlBERT does come with certain trade-offs. Due to the sharing of parameters, the capacity for individual layer-specific learning is reduced. This limitation can impact the model's ability to capture fine-grained features at each layer, potentially affecting its performance on tasks that require deep contextual understanding. Additionally, AlBERT may not achieve the same level of performance as BERT or other variations, such as RoBERTa, on certain complex language understanding tasks.
 
@@ -172,17 +172,17 @@ The emergence of backdoor attacks has sparked concerns regarding security and pr
 
 Computer vision is a field of study focused on enabling computers to comprehend and interpret visual information derived from images and videos. Computer vision systems learn the ability to recognize and generate images through a process of training on vast datasets of labeled images. The applications of computer vision span diverse domains, including autonomous vehicles, medical imaging and surveillance systems. Due to the large applications of computer vision, the risk of backdoor attacks is a prevalent issue in the field.
 
-Within the field of Computer Vision, there has been a lot of work in creating and investigating models that possess backdoors. One of these investigations includes the work done by Yunfei et al. \cite{DBLP:2007.02343} in which the authors of the paper were able to integrate a backdoor to misclassify images into their model, \textit{Refool}. Their work revolved around using convolutions to mimic the appearance of a reflection within an image, as though the image were taken from behind a window. 
+Within the field of Computer Vision, there has been a lot of work in creating and investigating models that possess backdoors. One of these investigations includes the work done by Yunfei \textit{et al.} \cite{DBLP:2007.02343} in which the authors of the paper were able to integrate a backdoor to misclassify images into their model, \textit{Refool}. Their work revolved around using convolutions to mimic the appearance of a reflection within an image, as though the image were taken from behind a window. 
 
 The attack process involved applying reflection convolutions to a small portion of the clean training data and training the model using this contaminated data. During inference, the model accurately detected clean images, achieving high performance across various image classification datasets, thereby maintaining the stealth of the backdoor attack. However, when a reflection was introduced to an image, the model began misclassifying the input to the pre-defined candidate label. In comparison to a baseline Deep Neural Network model, \textit{Refool} exhibited minimal impact on test accuracy while achieving a high success rate in the attack. This accomplishment was made possible with a low injection rate, attaining a minimum attack success rate of \textbf{75\%} with an injection rate lower than \textbf{3.27\%}.
 
-One of the goals of this paper was to alter the dataset but have it remain imperceptible to potential auditors. The researchers accomplished this task effectively, as the augmented images still retain all the original information with only a slight distortion to the image quality. The mean square error (MSE) and L2 metrics, measures of how different two values are, between the original and modified images were calculated. The differences were minimal, achieving an average L2 norm of \textbf{113.67} and an MSE of \textbf{75.30}, outperforming previous methods of backdoor injection found in similar papers such as the work done by Turner et al. \cite{turner2019cleanlabel}.
+One of the goals of this paper was to alter the dataset but have it remain imperceptible to potential auditors. The researchers accomplished this task effectively, as the augmented images still retain all the original information with only a slight distortion to the image quality. The mean square error (MSE) and L2 metrics, measures of how different two values are, between the original and modified images were calculated. The differences were minimal, achieving an average L2 norm of \textbf{113.67} and an MSE of \textbf{75.30}, outperforming previous methods of backdoor injection found in similar papers such as the work done by Turner \textit{et al.} \cite{turner2019cleanlabel}.
 
 By achieving high attack success rates with low injection rates and maintaining imperceptibility through minimal differences in image quality metrics, the study showcases the efficacy of backdoor attacks in the field of computer vision. 
 
 \section{Backdoor Attacks in Natural Language Processing}
 
-Research into backdoor attacks within NLP models has also been on the rise with one notable investigation being done by Xiaoyi et al. and their \textit{BadNL} model \cite{BadNL}. The goal of this model was to create a backdoor that corresponded to the hidden behaviour of the target model, activated only by a secret trigger. Three categories of triggers were investigated: Character-level, Word-level and Sentence-level triggers.
+Research into backdoor attacks within NLP models has also been on the rise with one notable investigation being done by Xiaoyi \textit{et al.} and their \textit{BadNL} model \cite{BadNL}. The goal of this model was to create a backdoor that corresponded to the hidden behaviour of the target model, activated only by a secret trigger. Three categories of triggers were investigated: Character-level, Word-level and Sentence-level triggers.
 
 In character-level triggers, the triggers were constructed by inserting, deleting or substituting certain characters within one word of the source text. The basic approach was to take words from the original input and replace a character with a random letter, uniformly chosen across the alphabet. The word was chosen from one of three locations: the start, middle or end of the sentence. The intuition was to intentionally introduce typographical errors. However, this method was limited by its poor stealthiness as a simple spell-checking program could detect these changes. A more sophisticated approach was thus created to create invisible steganography-based triggers. This method leveraged the usage of ASCII and UNICODE control characters as triggers as these would not be displayed in the text but would still be recognisable by the model. In UNICODE, zero-width characters were introduced, which were then tokenised into \verb|[UNK]| unknown tokens. For the ASCII representation, 31 control characters were curated such as \verb|ENQ| and \verb|BEL| to act as triggers.
 
@@ -190,7 +190,7 @@ With word-level triggers, a similar method to the above is used where a specific
 
 Finally, in sentence-level triggers, there were two methods of creating trigger data. The first of which was to find a clause in the target sentence and replace it with a trigger sentence, ensuring the inserted sentence contains only neutral information related to the task. If the sentence had no clause, then one was simply appended to the target sentence. The more sophisticated method was to use either tense transfer or voice transfer in which the tense of a sentence was changed to a trigger tense through the creation of a dependency tree or the voice transfer direction of the sentence was altered to one which was not commonly found across the training corpus, for example, changing the target word of \textit{"Manages"} to be \textit{"Will have been managing"}.
 
-Xiaoyi et al. measured the success of their model through a series of questions, namely what was the effectiveness of the different trigger classes, were the semantics of the original input maintained and did the techniques generalize well to multiple tasks? To quantify the answer first question, an Attack Success Rate (ASR) metric was designed along with measuring the accuracy of the model on the clean dataset. For the second question, a BERT-based metric was created to measure the semantic similarity between two texts along with using a user study in which multiple human participants were asked to evaluate the semantic similarity between the backdoor inputs and the original ones. Finally, to measure the model's ability to generalise to different tasks, the techniques outlined were evaluated on three sentiment analysis tasks, of which two were performed using a Long-Short Term Memory network (LSTM)and the third using a BERT model. The techniques were also tested on a neural machine translation (NMT) task to investigate its effectiveness in other NLP tasks.
+Xiaoyi \textit{et al.} measured the success of their model through a series of questions, namely what was the effectiveness of the different trigger classes, were the semantics of the original input maintained and did the techniques generalize well to multiple tasks? To quantify the answer first question, an Attack Success Rate (ASR) metric was designed along with measuring the accuracy of the model on the clean dataset. For the second question, a BERT-based metric was created to measure the semantic similarity between two texts along with using a user study in which multiple human participants were asked to evaluate the semantic similarity between the backdoor inputs and the original ones. Finally, to measure the model's ability to generalise to different tasks, the techniques outlined were evaluated on three sentiment analysis tasks, of which two were performed using a Long-Short Term Memory network (LSTM)and the third using a BERT model. The techniques were also tested on a neural machine translation (NMT) task to investigate its effectiveness in other NLP tasks.
 
 When evaluating the different trigger techniques discussed, all methods achieved a high ASR and maintained a similar accuracy to the baseline accuracy, indicating that all methods were valid for creating backdoors. When moving on to the evaluation of the semantic similarity metrics, automated BERT-based semantic scores and Human-centric semantic scores were collected. Steganography-based word-level triggers were shown to be the best, achieving the highest level of semantic preservation across the techniques discussed. Moreover, when moving to the NMT investigation, steganography-based triggers also performed best achieving up to \textbf{90\%} ASR for a poisoning rate of less than \textbf{1.0\%}.
 
@@ -236,5 +236,3 @@ However, it's worth noting that with more complex models like Transformer models
 While this method shows promise, it may face further challenges in real-world scenarios. Limited knowledge of the model under investigation and the data used for its training can hinder the effectiveness of weight analysis. Additionally, inherent biases in the baseline models, stemming from the training data, can lead to weight divergences unrelated to a dual-purpose model. Furthermore, creating multiple similar models for each investigation can be resource-intensive, especially for larger models like OpenAI's GPT models.
 
 Overall, although weight analysis and statistical techniques offer valuable insights into identifying backdoor attacks, especially in simpler models, their application to more complex models and real-world scenarios requires careful consideration of these challenges and limitations. Complementary approaches and advancements in model introspection and validation are necessary to enhance the effectiveness of detecting backdoor attacks and ensuring the security and trustworthiness of AI systems.
-
-
